fix(Document): usunięcie List<String>